[package]
name = "simtraining"
version = "0.1.0"
authors = ["fuying"]
build = "build.rs"
#
# [lib]
# name = "simtraining"
# path = "src/lib.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "^0.7.0", optional = true }
syntex = "*"

[dependencies]
time = "0.1"
rand = "0.3"
libc = "0.2"
mio = "0.5"
serde = "^0.7.0"
serde_json = "^0.7.0"
serde_macros = { version = "^0.7.0", optional = true }

# [dependencies.libevent_sys]
# path = "libevent-sys"

[dev-dependencies]
rand = "0.3"

[target.x86_64-pc-windows-msvc.dependencies]
winapi = "0.2"
ws2_32-sys = "0.2"
[target.x86_64-pc-windows-gnu.dependencies]
winapi = "0.2"
ws2_32-sys = "0.2"
[target.i686-pc-windows-msvc.dependencies]
winapi = "0.2"
ws2_32-sys = "0.2"
