[package]
name = "simtraining"
version = "0.1.0"
authors = ["fuying"]
# build = "build.rs"
# [lib]
# name = "simtraining"
# path = "src/lib.rs"

[dependencies]
time = "^0.1"
rand = "^0.3"
libc = "^0.2"
# mio = "^0.5"
serde = "^0.7"
serde_json = "^0.7"
serde_macros = "^0.7"
iron = "^0.3"
router = "^0.1.1"
mount = "^0.1.0"
staticfile = "^0.2.0"
diesel = { git = "https://github.com/diesel-rs/diesel.git", features = ["large-tables"] }
diesel_codegen = { git = "https://github.com/diesel-rs/diesel.git", default-features = false, features = ["nightly", "postgres"] }
dotenv = "^0.8"
dotenv_macros = "^0.9"
# rustless = "^0.7"
# rustc-serialize = "^0.3"
# valico = "^0.8"
# url = "^1.1"
# cookie = "^0.2"

# [dependencies.libevent_sys]
# path = "libevent-sys"

[dev-dependencies]
rand = "^0.3"

[target.x86_64-pc-windows-msvc.dependencies]
winapi = "^0.2"
ws2_32-sys = "^0.2"
[target.x86_64-pc-windows-gnu.dependencies]
winapi = "^0.2"
ws2_32-sys = "^0.2"
[target.i686-pc-windows-msvc.dependencies]
winapi = "^0.2"
ws2_32-sys = "^0.2"
