[package]
name = "libevent_sys"
version = "0.1.0"
authors = ["fuying"]
links = "event_core"
build = "build.rs"

[lib]
name = "libevent_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
[dev-dependencies]
ws2_32-sys = "0.2"
rand = "0.3"
time = "0.1"

[target.x86_64-pc-windows-msvc.dependencies]
winapi = "0.2"
[target.x86_64-pc-windows-gnu.dependencies]
winapi = "0.2"
[target.i686-pc-windows-msvc.dependencies]
winapi = "0.2"

[[test]]
name = "testinit"
path = "tests/testinit.rs"

[[test]]
name = "testtime"
path = "tests/testtime.rs"

[[example]]
name = "timeout"
path = "examples/timeout.rs"
