[package]
name = "test-serde"
version = "0.1.0"
authors = ["fuying"]
build = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "^0.7.0", optional = true }
syntex = "*"

[dependencies]
serde = "^0.7.0"
serde_json = "^0.7.0"
serde_macros = { version = "^0.7.0", optional = true }

[dependencies.simtraining]
path = "../../../simtraining"
